# Fall2023_CSC340_MovieDatabaseProject

./: CMakeLists.txt  LinkedList.cpp  LinkedList.h  Movie.cpp  Movie.h  MovieLibrary.cpp  MovieLibrary.h  People.cpp  People.h
