cmake_minimum_required(VERSION 3.26)
project(MovieDatabaseProject)

set(CMAKE_CXX_STANDARD 17)

add_executable(MovieDatabaseProject main.cpp
        LinkedList.h
        People.h
        People.cpp
        LinkedList.cpp
        Movie.h
        Movie.cpp
        MovieLibrary.h
        MovieLibrary.h
        MovieLibrary.h
        MovieLibrary.cpp)
